Update to Java 21 and Spring-boot 4.X